syntax = "proto3";

// Options for the GRPC
option java_multiple_files = true;
option java_package = "grpc.ca.agriculture";
option java_outer_classname = "IrrigationService";

package smartAgriculture;

// Service Definition
service irrigationService{
	rpc SetIrrigation (IrrigationParametersRequest) returns (IrrigationStatusResponse){}
	rpc GetIrrigStatus (LocationParametersRequest) returns (stream CurrentStatusResponse){}
	rpc CancelIrrigation (stream CancelationRequest) returns (stream CancelationResponse){}
}

// Define the messages for SetIrrigation method
message IrrigationParametersRequest{
	string myirrigationparameters = 1;
}

message IrrigationStatusResponse{
	string myirrigationstatusResponse = 1;
}

// Define the messages for GetIrrigStatus method
message LocationParametersRequest{
	float latitude = 1;
    float longitude = 2;
}

message CurrentStatusResponse{
	string mycurrentstatusResponse = 1;
}

// Define the messages for CancelIrrigation method
message CancelationRequest{
	int32 id = 1;
}

message CancelationResponse{
	string mycancelationresponse = 1;
}
